fix(loading): hide the overlay for stopped state (#145)
Doing so, instead of just making the overlay transparent, prevents overlay from covering up the rest of the contents. 

Fixes #144.

--- a/src/components/loading/_loading.scss
+++ b/src/components/loading/_loading.scss
@@ -53,6 +53,6 @@ $loading__size: 10.5rem;
   }
 
   .bx--loading-overlay--stop {
-    background-color: transparent;
+    display: none;
   }
 }
